--- a/src/app/egreso/egress/egress.page.html
+++ b/src/app/egreso/egress/egress.page.html
@@ -9,30 +9,17 @@
 
 <ion-content class="ion-padding" class="ion-wrap" style="position: relative;">
 
-    <!-- <div class="ion-justify-content-center">
-    <ion-row>
-        <h2 class="ion-text-center">¿Quien egresa?</h2>
-        <ion-item>
-            <ion-select class="mt-4" placeholder="DNI" value="dni" okText="Seleccionar">DNI
-                <ion-select-option value="DNI">DNI</ion-select-option>
-            </ion-select>
-            <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
-        </ion-item>
-      </ion-row>
-      <ion-button class="mt-4 ion-align-self-end" color="primary" routerLink="/">Aceptar</ion-button>
-  </div> -->
-
     <ion-row class="ion-justify-content-around">
         <h3>¿Quien egresa?</h3>
         <ion-item>
             <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
                 <ion-select-option value="DNI">DNI</ion-select-option>
             </ion-select>
-            <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
+            <ion-input type="text" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
         </ion-item>
     </ion-row>
     <div style="text-align-last: right">
-        <ion-button class="mt-4" routerLink="/">Aceptar</ion-button>
+        <ion-button class="mt-4" (click)="getPlanillaEgreso()">Aceptar</ion-button>
     </div>
 
 </ion-content>
