--- a/src/app/security/register/register.page.html
+++ b/src/app/security/register/register.page.html
@@ -4,7 +4,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
     <h1>Que buena noticia!</h1>
     <h4>Estamos muy felices de que estes acá!</h4>
     <h5>Por favor ingrese el numero
