--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -32,7 +32,7 @@
                     </b>
                 </p>
                 <button type="submit" value="submit" class="btn btn-primary btn-lg btn-block" (click)="onLogin()" [disabled]="!(user.email && user.password)">Login</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" routerLink="/signin">Registrarse</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" routerLink="/register">Registrarse</button>
             </form>
         </div>
     </div>
