--- a/src/app/Administrador/norms/norms.page.html
+++ b/src/app/Administrador/norms/norms.page.html
@@ -9,9 +9,17 @@
 
 <ion-content>
     <ion-list>
-      <ion-item *ngFor="let n of normas">
+      <ion-item *ngFor="let n of normas; let i = index"  [routerLink]="['/view-norm', i]" >
         <ion-icon name="list-box"></ion-icon>
         <ion-label class="ml-2">{{n.titulonorma}}</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
+
+<ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button>
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+</ion-footer>
