--- a/src/app/Administrador/manage-common-space/manage-common-space.page.html
+++ b/src/app/Administrador/manage-common-space/manage-common-space.page.html
@@ -1,9 +1,25 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>manageCommonSpace</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/menu-administrator'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+      <ion-item *ngFor="let n of espacioComun">
+        <ion-icon name="list-box"></ion-icon>
+        <ion-label class="ml-2"></ion-label>
+      </ion-item>
+    </ion-list>
 </ion-content>
+
+<ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="crearEspacioComun()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+</ion-footer>
