--- a/src/app/Administrador/new-norm/new-norm.page.html
+++ b/src/app/Administrador/new-norm/new-norm.page.html
@@ -1,9 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>newNorm</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/menu-administrator'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+
+  <ion-row>
+    <ion-item>
+        <ion-label position="floating">Titulo Norma
+            <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input required type="text" [(ngModel)]="tituloNorma"></ion-input>
+    </ion-item>
+  </ion-row>
+  <ion-item class="mt-3">
+      <ion-textarea required style="height: 200px" placeholder="Ingrese descripcion de la norma..." [(ngModel)]="descripcionNorma"></ion-textarea>
+  </ion-item>
+  <ion-row style="place-content: flex-end;" class="mt-5">
+    <ion-button [disabled]="!(tituloNorma && descripcionNorma)" style="width: 175px; justify-content: end" (click)="crearNorma()">Crear Norma</ion-button>
+  </ion-row>
 
 </ion-content>
