--- a/src/app/Administrador/norms/norms.page.html
+++ b/src/app/Administrador/norms/norms.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
     <ion-list>
-      <ion-item *ngFor="let n of normas; let i = index"  [routerLink]="['/view-norm', i]" >
+      <ion-item *ngFor="let n of normas; let i = index"  [routerLink]="['/view-norm', i+1]" >
         <ion-icon name="list-box"></ion-icon>
         <ion-label class="ml-2">{{n.titulonorma}}</ion-label>
       </ion-item>
@@ -18,7 +18,7 @@
 
 <ion-footer>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button>
+        <ion-fab-button (click)="crearNorma()">
           <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
