--- a/src/app/Administrador/manage-common-space/manage-common-space.page.html
+++ b/src/app/Administrador/manage-common-space/manage-common-space.page.html
@@ -9,8 +9,7 @@
 
 <ion-content>
     <ion-list>
-      <ion-item *ngFor="let n of espacioComun">
-        <ion-icon name="list-box"></ion-icon>
+      <ion-item *ngFor="let n of espacioComun; let i = index" (click)="presentActionSheet(i)">
         <ion-label class="ml-2"></ion-label>
       </ion-item>
     </ion-list>
@@ -18,7 +17,7 @@
 
 <ion-footer>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button (click)="crearEspacioComun()">
+        <ion-fab-button routerLink="/new-common-space">
           <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
