--- a/src/app/Administrador/menu-administrator/menu-administrator.page.html
+++ b/src/app/Administrador/menu-administrator/menu-administrator.page.html
@@ -7,19 +7,19 @@
 <ion-content padding>
     <ion-list>
         <ion-item>
-          <ion-label>Administrar Espacion Comunes</ion-label>
+          <ion-label (click)="irAAdministrarEspCom()">Administrar Espacion Comunes</ion-label>
         </ion-item>                
         <ion-item>
-          <ion-label>Administrar Guardias</ion-label>
+          <ion-label (click)="irAAdminGuardias()">Administrar Guardias</ion-label>
         </ion-item>                
         <ion-item>
-          <ion-label>Administrar Propietarios</ion-label>
+          <ion-label (click)="irAAdminPropietario()">Administrar Propietarios</ion-label>
         </ion-item>                
         <ion-item>
-          <ion-label>Novedades</ion-label>
+          <ion-label (click)="irANovedades()">Novedades</ion-label>
         </ion-item>                
         <ion-item>
-          <ion-label>Reportes</ion-label>
+          <ion-label (click)="irAReportes()">Reportes</ion-label>
         </ion-item>                
         <ion-item>
           <ion-label (click)="irANormas()">Normas</ion-label>
