css edit and services

--- a/src/app/Administrador/edit-common-space/edit-common-space.page.scss
+++ b/src/app/Administrador/edit-common-space/edit-common-space.page.scss
@@ -9,3 +9,12 @@ ion-button {
 ion-row {
     place-content: center;
 }
+
+.row-img {
+    height: 100px;
+}
+
+ion-img {
+    height: 80px;
+    width: 80px;;
+}
