--- a/src/app/Administrador/edit-common-space/edit-common-space.page.html
+++ b/src/app/Administrador/edit-common-space/edit-common-space.page.html
@@ -8,11 +8,9 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-row style="place-content: center">
-      <ion-thumbnail>
-          <!-- <ion-img [src]="espacioComun?.fotoEspacioComunContentType"></ion-img> -->
-          <ion-img [src]=foto></ion-img>
-        </ion-thumbnail>
+  <ion-row style="place-content: center"  class="row-img">
+    <!-- <ion-img [src]="espacioComun?.fotoEspacioComunContentType"></ion-img> -->
+    <ion-img [src]=foto></ion-img>
   </ion-row>
   <ion-row style="place-content: center">
     <ion-item>
