--- a/src/app/Guardia/news/news.page.scss
+++ b/src/app/Guardia/news/news.page.scss
@@ -122,7 +122,7 @@ $toUserBackgroundColor: #fff;
                 background-color: #387ef5 !important;
                 border-bottom-width: 0px !important;
                 border-left-width: 0px !important;
-                right: -5px;
+                right: -5px !important;
             }
         }
     }
