--- a/src/app/Guardia/news/news.page.html
+++ b/src/app/Guardia/news/news.page.html
@@ -8,12 +8,17 @@
 </ion-header>
 <ion-content>
     <div class="message-wrap">
-        <div *ngFor="let novedad of novedades" class="message left">
-            <!-- <img class="user-img" [src]="msg.userAvatar" alt="" src=""> -->
+        <div *ngFor="let novedad of novedades" [ngClass]="{'left': account.id!==novedad.creada.id, 'right': account.id==novedad.creada.id }" class="message">
+            <ng-container *ngIf="novedad?.creada.imageUrl; else elseTemplate">
+                <img class="user-img" [src]="novedad.creada.imageUrl" alt="../../../assets/image.png">
+            </ng-container>
+            <ng-template #elseTemplate>
+                <img class="user-img" src="../../../assets/image.png" alt="">
+            </ng-template>
             <div class="msg-detail">
                 <div class="msg-info">
                     <p>
-                        {{novedad.creada?.nombrePersona}}&nbsp;&nbsp;&nbsp;{{novedad.fecha | date:"MM/dd/yy" }}</p>
+                        {{novedad?.creada.firstName}}&nbsp;&nbsp;&nbsp;{{novedad.fecha | date:"MM/dd/yy" }}</p>
                 </div>
                 <div class="msg-content">
                     <span class="triangle"></span>
@@ -25,7 +30,7 @@
 </ion-content>
 <ion-footer no-border>
     <div class="input-wrap">
-        <textarea #messageInput placeholder="Escribe un mensaje" [(ngModel)]="chatMessage" (keyup.enter)="sendMessage()">
+        <textarea #messageInput placeholder="Escribe un mensaje" [(ngModel)]="chatMessage" (keydown.enter)="sendMessage()">
       </textarea>
         <button ion-button clear icon-only item-right (click)="sendMessage()">
         <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
