--- a/src/app/Guardia/news/news.page.html
+++ b/src/app/Guardia/news/news.page.html
@@ -7,6 +7,7 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
+    <!-- <ion-spinner name="dots"></ion-spinner> -->
     <div class="message-wrap">
         <div *ngFor="let novedad of novedades" [ngClass]="{'left': account.id!==novedad.creada.id, 'right': account.id==novedad.creada.id }" class="message">
             <ng-container *ngIf="novedad?.creada.imageUrl; else elseTemplate">
