--- a/src/app/Guardia/diary/diary.page.html
+++ b/src/app/Guardia/diary/diary.page.html
@@ -1,9 +1,40 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>diary</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/startmenu'></ion-back-button>
+        </ion-buttons>
+        <ion-title>Parte Diario</ion-title>
+    </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
+<ion-content class="ion-padding">
+    <!-- <ion-spinner name="dots"></ion-spinner> -->
+    <div class="message-wrap">
+        <div *ngFor="let reporte of reportes" [ngClass]="{'left': account.id!==reporte.reportePersona.id, 'right': account.id==reporte.reportePersona.id }" class="message">
+            <ng-container *ngIf="reporte?.reportePersona.imageUrl; else elseTemplate">
+                <img class="user-img" [src]="reporte?.reportePersona.imageUrl" alt="../../../assets/image.png">
+            </ng-container>
+            <ng-template #elseTemplate>
+                <img class="user-img" src="../../../assets/image.png" alt="">
+            </ng-template>
+            <div class="msg-detail">
+                <div class="msg-info">
+                    <p>
+                        {{reporte?.reportePersona.firstName}}&nbsp;&nbsp;&nbsp;{{reporte.fecha | date:"MM/dd/yy" }}</p>
+                </div>
+                <div class="msg-content">
+                    <span class="triangle"></span>
+                    <p class="line-breaker ">{{reporte.descripcion}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </ion-content>
+<ion-footer no-border>
+    <div class="input-wrap">
+        <textarea #messageInput placeholder="Escribe un mensaje" [(ngModel)]="chatMessage" (keydown.enter)="sendMessage()">
+    </textarea>
+        <button ion-button clear icon-only item-right (click)="sendMessage()">
+      <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
+    </button>
+    </div>
+</ion-footer>
