menu de guardia actualzado

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -21,7 +21,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="paper"></ion-icon>
-                    <ion-label (click)="reportes()">Parte diario</ion-label>
+                    <ion-label (click)="diary()">Parte diario</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="swap"></ion-icon>
