boton desabilitado si no ha seleccionado una tabla

--- a/src/app/Administrador/data-base/data-base.page.html
+++ b/src/app/Administrador/data-base/data-base.page.html
@@ -19,7 +19,7 @@
         </ion-item>
     </ion-list>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="onClick()">
-        <ion-fab-button>
+        <ion-fab-button [disabled]="entity === 99">
             <ion-icon name="download"></ion-icon>
         </ion-fab-button>
     </ion-fab>
