--- a/src/app/Administrador/menu-administrator/menu-administrator.page.html
+++ b/src/app/Administrador/menu-administrator/menu-administrator.page.html
@@ -4,7 +4,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
     <ion-list>
         <ion-item>
             <ion-label (click)="irAAdministrarEspCom()">Administrar Espacion Comunes</ion-label>
