common space edit and camera added

--- a/src/app/Administrador/manage-guard/manage-guard.page.html
+++ b/src/app/Administrador/manage-guard/manage-guard.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>manageGuard</ion-title>
+  <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+          <ion-back-button defaultHref='/menu-administrator'></ion-back-button>
+      </ion-buttons>
+      <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
   </ion-toolbar>
 </ion-header>
 
