--- a/src/app/Administrador/new-common-space/new-common-space.page.html
+++ b/src/app/Administrador/new-common-space/new-common-space.page.html
@@ -43,7 +43,7 @@
           </ion-item>
     </ion-item>
   </ion-row>
-  <ion-row>
+  <!-- <ion-row>
     <ion-item>
       <ion-item>
         <ion-label>Periodo de reserva:</ion-label>
@@ -51,10 +51,10 @@
                       picker-format="HH:mm" 
                       [value]="periodo"
                       minute-value="0,15,30,45"></ion-datetime>
-                      <!-- [(ngModel)]="espacioComun?.espacioTipos[0].periodo" -->
+                      [(ngModel)]="espacioComun?.espacioTipos[0].periodo"
       </ion-item>
     </ion-item>
-  </ion-row>
+  </ion-row> -->
 
   <ion-row class="mt-3">
     <ion-col>
