--- a/src/app/Administrador/edit-common-space/edit-common-space.page.html
+++ b/src/app/Administrador/edit-common-space/edit-common-space.page.html
@@ -9,12 +9,17 @@
 
 <ion-content class="ion-padding">
   <ion-row style="place-content: center"  class="row-img">
-    <!-- <ion-img [src]="espacioComun?.fotoEspacioComunContentType"></ion-img> -->
-    <ion-img [src]=foto></ion-img>
+    <ion-img *ngIf="espacioComun?.fotoEspacioComun !== undefined || espacioComun?.fotoEspacioComun !== ''" [src]="espacioComun?.fotoEspacioComun"></ion-img>
+    <ion-img *ngIf="espacioComun?.fotoEspacioComun === undefined || espacioComun?.fotoEspacioComun === ''" [src]="espacioComun?.fotoEspacioComun"></ion-img>
+    <!-- <ion-img [src]=foto></ion-img> -->
+  </ion-row>
+  <ion-row>
+      <ion-icon name="image" class="mr-3 icon" (click)="getPictureAlbum()"></ion-icon>
+      <ion-icon name="camera" class="icon" (click)="getPicture()"></ion-icon>
   </ion-row>
   <ion-row style="place-content: center">
     <ion-item>
-        <ion-label position="floating">Nombre Espacio Comun
+        <ion-label position="floating"> {{espacioComun?.nombreEspacioComun}}
             <ion-text color="danger">*</ion-text>
         </ion-label>
         <ion-input required type="text"></ion-input>
@@ -42,18 +47,16 @@
           </ion-item>
     </ion-item>
   </ion-row>
-  <ion-row>
+  <!-- <ion-row>
     <ion-item>
-      <ion-item>
-        <ion-label>Periodo de reserva:</ion-label>
-        <ion-datetime displayFormat="HH:mm"  
-                      picker-format="HH:mm" 
-                      [value]="espacioComun?.espacioTipos[0].periodo"
-                      minute-value="0,15,30,45"></ion-datetime>
-                      <!-- [(ngModel)]="espacioComun?.espacioTipos[0].periodo" -->
-      </ion-item>
-    </ion-item>
-  </ion-row>
+      <ion-label>Periodo de reserva:</ion-label>
+      <ion-datetime displayFormat="HH:mm"  
+                    picker-format="HH:mm" 
+                    [value]="espacioComun?.espacioTipos[0].periodo"
+                    minute-value="0,15,30,45"></ion-datetime> -->
+                    <!-- [(ngModel)]="espacioComun?.espacioTipos[0].periodo" -->
+    <!-- </ion-item>
+  </ion-row> -->
 
   <ion-row class="mt-3">
     <ion-col>
