--- a/src/app/Administrador/manage-common-space/manage-common-space.page.html
+++ b/src/app/Administrador/manage-common-space/manage-common-space.page.html
@@ -10,7 +10,7 @@
 <ion-content>
     <ion-list>
       <ion-item *ngFor="let n of espacioComun; let i = index" (click)="presentActionSheet(i)">
-        <ion-label class="ml-2"></ion-label>
+        <ion-label class="ml-2"> {{n.nombreEspacioComun}} </ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
