--- a/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
+++ b/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref='/startmenu'></ion-back-button>
+            <ion-back-button defaultHref='/'></ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-capitalize ion-text-center">Planilla Ingreso/Egreso</ion-title>
     </ion-toolbar>
