post profile modificated

--- a/src/app/shared/profile/profile.page.html
+++ b/src/app/shared/profile/profile.page.html
@@ -45,5 +45,10 @@
             <h6>Cerrar Sesión</h6>
         </ion-text>
     </ng-container>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="postAccount()">
+        <ion-fab-button>
+            <ion-icon name="save"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 
 </ion-content>
