--- a/src/app/funcionesMenu/personas-dentro-establecimiento/personas-dentro-establecimiento.page.html
+++ b/src/app/funcionesMenu/personas-dentro-establecimiento/personas-dentro-establecimiento.page.html
@@ -66,7 +66,7 @@
         <ion-col>
             <ion-item>
                 <ion-label>
-                    {{p.planillaDestino.casaDomicilio}}
+                        C: {{p.planillaDestino?.casaDomicilio}} M: {{p.planillaDestino?.manzanaDomicilio}}
                 </ion-label>
             </ion-item>
         </ion-col>
