--- a/src/app/Administrador/manage-guard/manage-guard.page.html
+++ b/src/app/Administrador/manage-guard/manage-guard.page.html
@@ -24,3 +24,11 @@
     </ion-list>
 
 </ion-content>
+
+<ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="crearGuardia()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+</ion-footer>
