--- a/src/app/Administrador/edit-common-space/edit-common-space.page.html
+++ b/src/app/Administrador/edit-common-space/edit-common-space.page.html
@@ -19,9 +19,9 @@
   </ion-row>
   <ion-row style="place-content: center">
     <ion-item>
-        <ion-label position="floating"> {{espacioComun?.nombreEspacioComun}}
+        <!-- <ion-label position="floating"> {{espacioComun?.nombreEspacioComun}}
             <ion-text color="danger">*</ion-text>
-        </ion-label>
+        </ion-label> -->
         <ion-input required type="text" [(ngModel)]="nombreEspacioComun"></ion-input>
     </ion-item>
   </ion-row>
