--- a/src/app/Administrador/new-common-space/new-common-space.page.html
+++ b/src/app/Administrador/new-common-space/new-common-space.page.html
@@ -10,15 +10,19 @@
 <ion-content class="ion-padding">
   <ion-row style="place-content: center" class="row-img">
     <!-- <ion-img [src]="espacioComun?.fotoEspacioComunContentType"></ion-img> -->
-    <ion-img *ngIf="foto !== undefined" [src]=foto widht="80px" height="80px"></ion-img>
-    <ion-img *ngIf="foto === undefined" [src]=fotoVacia widht="80px" height="80px"></ion-img>
+    <ion-img *ngIf="fotoEspCom !== undefined" [src]=fotoEspCom widht="80px" height="80px"></ion-img>
+    <ion-img *ngIf="fotoEspCom === undefined" [src]=fotoVacia widht="80px" height="80px"></ion-img>
   </ion-row>
+  <ion-row>
+    <ion-icon name="image" class="mr-3 icon" (click)="getPictureAlbum()"></ion-icon>
+    <ion-icon name="camera" class="icon" (click)="getPicture()"></ion-icon>
+</ion-row>
   <ion-row style="place-content: center">
     <ion-item>
         <ion-label position="floating">Nombre Espacio Comun
             <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input required type="text"></ion-input>
+        <ion-input required type="text" [(ngModel)]="nombreEspComun"></ion-input>
     </ion-item>
   </ion-row>
   <ion-row>
@@ -27,7 +31,8 @@
             <ion-label>Disponibilidad Hasta:</ion-label>
             <ion-datetime displayFormat="HH:mm"  
                           picker-format="HH:mm" 
-                          [value]="horaDesde"></ion-datetime>
+                          [value]="horaDesde"
+                          [(ngModel)]="horaDesde"></ion-datetime>
                           <!-- [(ngModel)]="espacioComun.horaDesde"></ion-datetime> -->
                         </ion-item>
     </ion-item>
@@ -38,8 +43,8 @@
             <ion-label>Disponibilidad Hasta:</ion-label>
             <ion-datetime displayFormat="HH:mm"  
                           picker-format="HH:mm" 
-                          [value]="horaHasta"></ion-datetime>
-                          <!-- [(ngModel)]="espacioComun.horaHasta"></ion-datetime> -->
+                          [value]="horaHasta"
+                          [(ngModel)]="horaHasta"></ion-datetime>
           </ion-item>
     </ion-item>
   </ion-row>
@@ -58,10 +63,10 @@
 
   <ion-row class="mt-3">
     <ion-col>
-      <ion-button>Volver</ion-button>
+      <ion-button routerLink="/manage-common-space">Volver</ion-button>
     </ion-col>
     <ion-col style="text-align: right;">
-      <ion-button>Guardar</ion-button>
+      <ion-button (click)="crearEspacioComun()">Guardar</ion-button>
     </ion-col>
   </ion-row>
 
