--- a/src/app/Administrador/search-guard/search-guard.page.html
+++ b/src/app/Administrador/search-guard/search-guard.page.html
@@ -1,9 +1,23 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>searchGuard</ion-title>
+  <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+          <ion-back-button defaultHref='/'></ion-back-button>
+      </ion-buttons>
+      <ion-title class="ion-text-capitalize ion-text-center">Guardias</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding" fullscreen>
+
+    <ion-row class="ion-justify-content-around">
+        <h3>Por favor ingrese el email</h3>
+        <ion-item>
+          <ion-label>Email:</ion-label>
+          <ion-input class="ml-2" type="text" placeholder="Email" [(ngModel)]="email"></ion-input>
+        </ion-item>
+    </ion-row>
+    <div style="text-align-last: right">
+        <ion-button class="mt-4 ion-align-self-end" (click)="getGuardia()">Aceptar</ion-button>
+    </div>
 
 </ion-content>
