menu report eventos terminado

--- a/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
+++ b/src/app/funcionesMenu/planilla-ingreso-egreso/planilla-ingreso-egreso.page.html
@@ -51,7 +51,7 @@
           <ion-row *ngFor="let p of planiallaIngresoEgreso">
               <ion-col>
                   <ion-item>
-                      <ion-label class="border">
+                      <ion-label>
                           {{p.planillaPersona.apellidoPersona}}
                       </ion-label>
                   </ion-item>
