--- a/src/app/Owner/information/information.page.html
+++ b/src/app/Owner/information/information.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>information</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
 
-<ion-content>
+  <ion-tab-bar color="primary" slot="bottom">
+    <ion-tab-button tab="file">
+      <ion-label>Archivos</ion-label>
+      <ion-icon name="browsers"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="phone">
+      <ion-label>Teléfonos</ion-label>
+      <ion-icon name="swap"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
 
-</ion-content>
+</ion-tabs>
