--- a/src/app/Owner/menu-owner/menu-owner.page.html
+++ b/src/app/Owner/menu-owner/menu-owner.page.html
@@ -1,9 +1,29 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>menuOwner</ion-title>
+  <ion-toolbar color="primary">
+      <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-list>
+      <ion-item>
+          <ion-label (click)="irAutorizacionPrevia()">Autorización Previas</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-label (click)="IrEventos()">Eventos</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-label (click)="irPorteria()">Portería</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-label (click)="irInformacionUtil()">Información Útil</ion-label>
+      </ion-item>
+  </ion-list>
 </ion-content>
+<ion-footer>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button (click)="perfilOwner()">
+          <ion-icon name="person"></ion-icon>
+      </ion-fab-button>
+  </ion-fab>
+</ion-footer>
