--- a/src/app/Owner/information/information.page.html
+++ b/src/app/Owner/information/information.page.html
@@ -3,11 +3,11 @@
   <ion-tab-bar color="primary" slot="bottom">
     <ion-tab-button tab="file">
       <ion-label>Archivos</ion-label>
-      <ion-icon name="browsers"></ion-icon>
+      <ion-icon name="document"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="phone">
       <ion-label>Teléfonos</ion-label>
-      <ion-icon name="swap"></ion-icon>
+      <ion-icon name="contact"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
