--- a/src/app/Owner/authorizations/authorizations.page.html
+++ b/src/app/Owner/authorizations/authorizations.page.html
@@ -1,9 +1,18 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>authorizations</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
 
-<ion-content>
+  <ion-tab-bar color="primary" slot="bottom">
+    <ion-tab-button tab="resident">
+      <ion-label>Residentes</ion-label>
+      <ion-icon name="home"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="visit">
+      <ion-label>Visitas</ion-label>
+      <ion-icon name="people"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="employee">
+      <ion-label>Empleados</ion-label>
+      <ion-icon name="person"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
 
-</ion-content>
+</ion-tabs>
