--- a/src/app/Owner/events/events.page.html
+++ b/src/app/Owner/events/events.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>events</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
 
-<ion-content>
+  <ion-tab-bar color="primary" slot="bottom">
+    <ion-tab-button tab="places">
+      <ion-label>Lugares</ion-label>
+      <ion-icon name="document"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="friendsList">
+      <ion-label>Lista de Amigos</ion-label>
+      <ion-icon name="contact"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
 
-</ion-content>
+</ion-tabs>
