--- a/src/app/Owner/events/friends-list/friends-list.page.html
+++ b/src/app/Owner/events/friends-list/friends-list.page.html
@@ -1,8 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>friendsList</ion-title>
+  <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+          <ion-back-button defaultHref='/menu-owner'></ion-back-button>
+      </ion-buttons>
+      <ion-title class="ion-text-capitalize ion-text-center">Lista de Amigos</ion-title>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content>
 
