--- a/src/app/Owner/events/places/places.page.html
+++ b/src/app/Owner/events/places/places.page.html
@@ -1,9 +1,17 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>places</ion-title>
+  <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+          <ion-back-button defaultHref='/menu-owner'></ion-back-button>
+      </ion-buttons>
+      <ion-title class="ion-text-capitalize ion-text-center">Lugares</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+<ion-content fullscreen class="ion-padding">
+  <ion-list>
+    <ion-item *ngFor="let n of espacioComun; let i = index">
+      <ion-label class="ml-2"> {{n.nombreEspacioComun}} </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
