--- a/src/app/Owner/information/phone/phone.page.html
+++ b/src/app/Owner/information/phone/phone.page.html
@@ -7,6 +7,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen class="ion-padding">
+
+    <ul class="list-group">
+      <li class="list-group-item">Administracion: 2616349517 </li>
+      <li class="list-group-item">Emergencias: 911</li>
+      <li class="list-group-item">Bomberos: 100 </li>
+      <li class="list-group-item">Policía de Mendoza: 101 </li>
+      <li class="list-group-item">Policía Federal: 423-8710</li>
+    </ul>
 
 </ion-content>
