--- a/src/app/ingreso/dnisearch/dnisearch.page.html
+++ b/src/app/ingreso/dnisearch/dnisearch.page.html
@@ -25,16 +25,14 @@
     </div> -->
 
     <ion-row class="ion-justify-content-around">
-        <h3>Por favor ingrese el numero</h3>
-        <ion-item>
-            <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
-                <ion-select-option value="DNI">DNI</ion-select-option>
-            </ion-select>
-            <ion-input type="number" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
-        </ion-item>
-    </ion-row>
-    <div style="text-align-last: right">
-        <ion-button class="mt-4 ion-align-self-end" (click)="getpersona()">Aceptar</ion-button>
-    </div>
+            <h3>Por favor ingrese el DNI</h3>
+            <ion-item>
+                <ion-label>DNI : </ion-label>
+                <ion-input type="number" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
+            </ion-item>
+        </ion-row>
+        <div style="text-align-last: right">
+            <ion-button class="mt-4 ion-align-self-end" (click)="getpersona()">Aceptar</ion-button>
+        </div>
 
 </ion-content>
