creada lista amigos

--- a/src/app/Owner/events/events.page.html
+++ b/src/app/Owner/events/events.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar color="primary" slot="bottom">
     <ion-tab-button tab="places">
       <ion-label>Lugares</ion-label>
-      <ion-icon name="document"></ion-icon>
+      <ion-icon name="home"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="friendsList">
       <ion-label>Lista de Amigos</ion-label>
