--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -29,7 +29,7 @@
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="clipboard"></ion-icon>
-                    <ion-label>Consultar evento</ion-label>
+                    <ion-label (click)="evento()">Consultar evento</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-icon slot="start" name="close"></ion-icon>
